@@ -11,6 +11,7 @@ Changes in Release 2.2.1
 [SIDP-436] - Null AuthnContextClassRef causes NPE
 [SIDP-447] - Fix for SIDP-417 missed RemoteUserLoginHandler
 [SIDP-450] - NPE with AttributeQueryProfile when there are errors resolving attributes
+[SIDP-453] - Session inactivity timeout being treated as a hard expiration time
 
 Changes in Release 2.2.0
 =============================================
